; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_dcadsp.c_lfe_fir0_float_c.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_dcadsp.c_lfe_fir0_float_c.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (float*, i32*, float*, i32)* @lfe_fir0_float_c to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @lfe_fir0_float_c(float* %0, i32* %1, float* %2, i32 %3) #0 {
  %5 = alloca float*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca float*, align 8
  %8 = alloca i32, align 4
  store float* %0, float** %5, align 8
  store i32* %1, i32** %6, align 8
  store float* %2, float** %7, align 8
  store i32 %3, i32* %8, align 4
  %9 = load float*, float** %5, align 8
  %10 = load i32*, i32** %6, align 8
  %11 = load float*, float** %7, align 8
  %12 = load i32, i32* %8, align 4
  %13 = call i32 @lfe_fir_float_c(float* %9, i32* %10, float* %11, i32 %12, i32 0)
  ret void
}

declare dso_local i32 @lfe_fir_float_c(float*, i32*, float*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
